--- a/android/app/src/main/res/layout/activity_view_status.xml
+++ b/android/app/src/main/res/layout/activity_view_status.xml
@@ -8,119 +8,115 @@
     android:animateLayoutChanges="true"
     tools:context="se.viltefjall.tekk.ermina.ViewStatus.ViewStatusActivity">
 
-    <LinearLayout
+    <se.viltefjall.tekk.ermina.common.WaterView
+        android:id="@+id/waterView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="horizontal"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:elevation="5dp"
+        android:visibility="visible"
+        app:backgroundColor="#d1d1d1"
+        app:foregroundColor="#1cb2e4"
+        app:fromDegree="140"
+        app:gaugePenSize="60"
+        app:iconColor="@color/waterLevelColor"
+        app:layout_constraintBottom_toTopOf="@+id/reload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline6"
+        app:ringColor="@color/statusRingColor"
+        app:ringPenSize="30"
+        app:textSize="80"
+        app:toDegree="400" />
+
+    <se.viltefjall.tekk.ermina.common.MoistureView
+        android:id="@+id/moistureView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="visible"
+        app:arrowColor="@color/moistureArrowColor"
+        app:backgroundColor="#d1d1d1"
+        app:fromDegree="140"
+        app:gaugePenSize="60"
+        app:textSize="60"
+        app:iconColor="@color/moistureLevelColor"
+        app:layout_constraintBottom_toTopOf="@+id/guideline6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:ringColor="@color/statusRingColor"
+        app:ringPenSize="30"
+        app:toDegree="400" />
+
+    <ImageView
+        android:id="@+id/calib"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/round_hover_btn"
+        android:clickable="false"
+        android:elevation="5dp"
+        android:onClick="calib"
+        android:padding="16dp"
+        android:src="@mipmap/calib"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/statusLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:elevation="0dp"
-            android:orientation="vertical"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+    <ImageView
+        android:id="@+id/reload"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/round_hover_btn"
+        android:clickable="false"
+        android:elevation="5dp"
+        android:onClick="reload"
+        android:padding="16dp"
+        android:src="@mipmap/reload"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/calib"
+        app:layout_constraintStart_toEndOf="@+id/settings" />
 
-            <se.viltefjall.tekk.ermina.common.MoistureView
-                android:id="@+id/moistureView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:gaugePenSize="60"
-                app:backgroundColor="#d1d1d1"
-                app:ringPenSize="30"
-                app:arrowColor="@color/moistureArrowColor"
-                app:ringColor="@color/statusRingColor"
-                app:iconColor="@color/moistureLevelColor"
-                app:toDegree="400"
-                app:fromDegree="140" />
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/round_hover_btn"
+        android:clickable="false"
+        android:elevation="5dp"
+        android:onClick="settings"
+        android:padding="16dp"
+        android:src="@mipmap/settings"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-            <se.viltefjall.tekk.ermina.common.WaterView
-                android:id="@+id/waterView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:elevation="5dp"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:fromDegree="140"
-                app:gaugePenSize="60"
-                app:foregroundColor="#1cb2e4"
-                app:backgroundColor="#d1d1d1"
-                app:ringPenSize="30"
-                app:ringColor="@color/statusRingColor"
-                app:iconColor="@color/waterLevelColor"
-                app:textSize="80"
-                app:toDegree="400" />
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.86" />
 
-        </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:clipToPadding="false"
-            android:padding="8dp"
-            android:gravity="center">
-
-            <ImageView
-                android:id="@+id/reload"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:background="@drawable/round_hover_btn"
-                android:src="@mipmap/reload"
-                android:padding="16dp"
-                android:clickable="false"
-                android:onClick="reload"
-                android:elevation="5dp" />
-
-            <ImageView
-                android:id="@+id/settings"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:clickable="true"
-                android:onClick="settings"
-                android:layout_below="@+id/reload"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/round_hover_btn"
-                android:src="@mipmap/settings"
-                android:padding="16dp"
-                android:elevation="5dp" />
-        </RelativeLayout>
-
-    </LinearLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.43" />
 
 </android.support.constraint.ConstraintLayout>
